style(FIX): Stacking issues. No longer bleeds in with entries
The sidebar hover items no longer bleed with other relative,z-index
elements. The solution was to create a new stacking order by giving the
parent a high z-index.In our case, the parent was position:fixed.

--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -8,6 +8,7 @@
   position: fixed;
   margin-top: 5.2rem;
   top: 0;
+  z-index: 999;
 }
 
 .sidebar.open {
